--- a/productos.html
+++ b/productos.html
@@ -11,7 +11,7 @@
     <header class="topbar">
       <img src="logo.jpg" alt="Logo TechNova" class="logo" />
       <nav class="nav-links">
-        <a href="index.html">Inicio Rápido</a>
+        <a href="index.php">Inicio Rápido</a>
         <a href="#">Nuestras Ofertas</a>
         <a href="#">Soporte Técnico</a>
         <a href="#">Contáctanos</a>
